updating some errors

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 </head>
 <body class="bg-gray-100 flex items-center justify-center h-screen">
     <div class="bg-gray-800 p-8 rounded-lg shadow-lg w-full max-w-md">
-        <h1 class="text-2xl font-bold text-center text-white mb-6">Spam and Ham Classifier</h1>
+        <h1 class="text-2xl font-bold text-center text-white mb-6">Spam Or Ham Classifier using NLP</h1>
         <form id="classifier-form" method="POST" class="space-y-4" onsubmit="setTimeout(resetForm, 10);">
             <div>
                 <label for="message" class="block text-sm font-medium text-white">Enter your message:</label>
